--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  9 00:05:16 2018</p>
+         Last Run: Fri Nov  9 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,26 +30,26 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-5</td>
-                        <td>6</td>
-                        <td>69</td>
+                        <td>Chance of Rain</td>
+                        <td>1</td>
+                        <td>-2</td>
+                        <td>33</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>WSW</td>
-                        <td>41</td>
+                        <td>W</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>6</td>
-                        <td>69</td>
+                        <td>24</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>WSW</td>
+                        <td>W</td>
                         <td>44</td>
                      </tr>
                      <tr>
@@ -57,12 +57,12 @@
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>4</td>
-                        <td>70</td>
+                        <td>6</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>WSW</td>
-                        <td>46</td>
+                        <td>W</td>
+                        <td>42</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-5",
+                 "-2",
                  "-6",
                  "-6"
                ]
@@ -101,7 +101,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-1",
+                 "1",
                  "-2",
                  "-2"
                ]
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
-                 "6",
-                 "4"
+                 "33",
+                 "24",
+                 "6"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
-                 "69",
-                 "70"
+                 "64",
+                 "74",
+                 "76"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "41",
+                 "49",
                  "44",
-                 "46"
+                 "42"
                ]
              }
            ]
