--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  9 04:05:03 2018</p>
+         Last Run: Fri Nov  9 05:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Snow Showers</td>
                         <td>0</td>
                         <td>-4</td>
-                        <td>23</td>
-                        <td>68</td>
-                        <td>0</td>
-                        <td>11</td>
-                        <td>W</td>
-                        <td>49</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-5</td>
-                        <td>23</td>
+                        <td>37</td>
                         <td>70</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>44</td>
+                        <td>56</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Chance of Rain</td>
+                        <td>1</td>
+                        <td>-2</td>
+                        <td>37</td>
+                        <td>64</td>
+                        <td>0</td>
+                        <td>11</td>
+                        <td>W</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-5</td>
-                        <td>7</td>
-                        <td>71</td>
+                        <td>5</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>42</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-4",
-                 "-5",
+                 "-2",
                  "-5"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "0",
-                 "-1",
+                 "1",
                  "-1"
                ]
              }
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "23",
-                 "23",
-                 "7"
+                 "37",
+                 "37",
+                 "5"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
                  "70",
-                 "71"
+                 "64",
+                 "72"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "49",
-                 "44",
-                 "42"
+                 "56",
+                 "50",
+                 "40"
                ]
              }
            ]
