--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  9 14:05:03 2018</p>
+         Last Run: Fri Nov  9 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-4</td>
-                        <td>19</td>
-                        <td>69</td>
+                        <td>Clear</td>
+                        <td>1</td>
+                        <td>-3</td>
+                        <td>5</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>36</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>0</td>
-                        <td>-4</td>
-                        <td>20</td>
-                        <td>70</td>
+                        <td>1</td>
+                        <td>-3</td>
+                        <td>6</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>28</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-1</td>
-                        <td>-5</td>
-                        <td>4</td>
-                        <td>70</td>
+                        <td>0</td>
+                        <td>-4</td>
+                        <td>3</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>24</td>
+                        <td>20</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,9 +89,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
-                 "-4",
-                 "-5"
+                 "-3",
+                 "-3",
+                 "-4"
                ]
              },
              {
@@ -101,9 +101,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "0",
-                 "0",
-                 "-1"
+                 "1",
+                 "1",
+                 "0"
                ]
              }
            ]
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "19",
-                 "20",
-                 "4"
+                 "5",
+                 "6",
+                 "3"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
-                 "70",
-                 "70"
+                 "63",
+                 "64",
+                 "66"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "36",
-                 "28",
-                 "24"
+                 "22",
+                 "21",
+                 "20"
                ]
              }
            ]
