--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  9 23:05:02 2018</p>
+         Last Run: Sat Nov 10 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,7 +30,7 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>8</td>
@@ -38,31 +38,31 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>28</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>1</td>
-                        <td>-3</td>
-                        <td>9</td>
-                        <td>66</td>
+                        <td>-2</td>
+                        <td>8</td>
+                        <td>67</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>W</td>
-                        <td>28</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-4</td>
-                        <td>4</td>
-                        <td>67</td>
+                        <td>9</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>28</td>
+                        <td>37</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-2",
-                 "-3",
+                 "-2",
                  "-4"
                ]
              },
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "8",
-                 "9",
-                 "4"
+                 "8",
+                 "9"
                ]
              },
              {
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "65",
-                 "66",
-                 "67"
+                 "67",
+                 "68"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "28",
-                 "28",
-                 "28"
+                 "36",
+                 "36",
+                 "37"
                ]
              }
            ]
