--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 10 01:05:07 2018</p>
+         Last Run: Sat Nov 10 02:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,24 +33,24 @@
                         <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>4</td>
-                        <td>68</td>
+                        <td>3</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>W</td>
-                        <td>33</td>
+                        <td>WSW</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>7</td>
-                        <td>69</td>
+                        <td>6</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>33</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>9</td>
-                        <td>70</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>34</td>
+                        <td>56</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,8 +160,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "7",
+                 "3",
+                 "6",
                  "9"
                ]
              },
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
-                 "69",
-                 "70"
+                 "66",
+                 "66",
+                 "68"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "33",
-                 "33",
-                 "34"
+                 "58",
+                 "57",
+                 "56"
                ]
              }
            ]
