--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 10 10:05:03 2018</p>
+         Last Run: Sat Nov 10 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>4</td>
-                        <td>65</td>
-                        <td>0</td>
                         <td>13</td>
-                        <td>WSW</td>
-                        <td>36</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>1</td>
-                        <td>-3</td>
-                        <td>4</td>
-                        <td>66</td>
-                        <td>0</td>
-                        <td>13</td>
-                        <td>W</td>
-                        <td>36</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-4</td>
-                        <td>4</td>
                         <td>67</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>WSW</td>
-                        <td>38</td>
+                        <td>W</td>
+                        <td>67</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>1</td>
+                        <td>-3</td>
+                        <td>10</td>
+                        <td>67</td>
+                        <td>0</td>
+                        <td>13</td>
+                        <td>W</td>
+                        <td>68</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>0</td>
+                        <td>-4</td>
+                        <td>23</td>
+                        <td>68</td>
+                        <td>0</td>
+                        <td>13</td>
+                        <td>W</td>
+                        <td>67</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "4",
-                 "4"
+                 "13",
+                 "10",
+                 "23"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
-                 "66",
-                 "67"
+                 "67",
+                 "67",
+                 "68"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "36",
-                 "36",
-                 "38"
+                 "67",
+                 "68",
+                 "67"
                ]
              }
            ]
