--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 10 11:05:02 2018</p>
+         Last Run: Sat Nov 10 12:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Mostly Cloudy</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>13</td>
-                        <td>67</td>
+                        <td>16</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>67</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>1</td>
-                        <td>-3</td>
-                        <td>10</td>
-                        <td>67</td>
-                        <td>0</td>
+                        <td>-2</td>
                         <td>13</td>
+                        <td>66</td>
+                        <td>0</td>
+                        <td>11</td>
                         <td>W</td>
-                        <td>68</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>0</td>
-                        <td>-4</td>
-                        <td>23</td>
-                        <td>68</td>
+                        <td>Chance of Rain</td>
+                        <td>1</td>
+                        <td>-3</td>
+                        <td>34</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>67</td>
+                        <td>69</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,8 +90,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "-3",
-                 "-4"
+                 "-2",
+                 "-3"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "1",
                  "1",
-                 "0"
+                 "1"
                ]
              }
            ]
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "16",
                  "13",
-                 "10",
-                 "23"
+                 "34"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
-                 "67",
-                 "68"
+                 "66",
+                 "66",
+                 "66"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "67",
                  "68",
-                 "67"
+                 "69",
+                 "69"
                ]
              }
            ]
