--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 10 12:05:05 2018</p>
+         Last Run: Sat Nov 10 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,23 +34,23 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>16</td>
-                        <td>66</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>68</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>1</td>
-                        <td>-2</td>
-                        <td>13</td>
-                        <td>66</td>
+                        <td>-3</td>
+                        <td>15</td>
+                        <td>68</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>69</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>34</td>
-                        <td>66</td>
+                        <td>68</td>
                         <td>0</td>
-                        <td>13</td>
-                        <td>W</td>
-                        <td>69</td>
+                        <td>14</td>
+                        <td>WNW</td>
+                        <td>90</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "-2",
+                 "-3",
                  "-3"
                ]
              },
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "16",
-                 "13",
+                 "15",
                  "34"
                ]
              },
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
-                 "66",
-                 "66"
+                 "68",
+                 "68",
+                 "68"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "68",
-                 "69",
-                 "69"
+                 "78",
+                 "86",
+                 "90"
                ]
              }
            ]
